--- a/pages/asynchronous/ajax.html
+++ b/pages/asynchronous/ajax.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" type="text/css" href="../../../_css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="../../../_css/style.css">
+  <link rel="stylesheet" type="text/css" href="../../_css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="../../_css/style.css">
   <title>AJAX</title>
 </head>
 
 <body>
-  <a href="../../../index.html">Home page</a>
+  <a href="../../index.html">Home page</a>
 
 
   <section class="container">
