--- a/index.html
+++ b/index.html
@@ -512,7 +512,17 @@
     <ul class="main-nav">
       <ul class="sub-nav">
         <li><a href="pages/modern-js/modern-js-overview.html">Modern JS overview</a></li>
-     
+        <li><a href="pages/modern-js/modules.html">Modules</a></li>
+      </ul>
+    </ul>
+
+
+    <p class="toc-heading1">NPM and Build Tools</p>
+
+    <ul class="main-nav">
+      <ul class="sub-nav">
+        <li><a href="pages/npm/npm-overview.html">NPM overview</a> and Parcel</li>      
+        <li><a href="pages/npm/babel.html">Babel and Polyfilling</a></li>      
       </ul>
     </ul>
 
