--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
       <ul class="sub-nav">
         <li><a href="pages/modern-js/modern-js-overview.html">Modern JS overview</a></li>
         <li><a href="pages/modern-js/modules.html">Modules</a></li>
+        <li><a href="pages/modern-js/declarative-functional-programming.html">Declarative and Functional programming</a></li>
       </ul>
     </ul>
 
