--- a/pages/dom/changing-element-data.html
+++ b/pages/dom/changing-element-data.html
@@ -34,9 +34,27 @@
                   target="_blank">.createElement()</a></span> creates a new element but does not add it to the DOM.</p>
           </div>
           <div class="col-7">
-            <pre class="example"><span class="code-js">const message = document.createElement('div');</span></pre>
+            <pre class="example"><span class="code-js">const message = document.createElement('div');
+              
+            </span></pre>
           </div>
         </div>
+
+
+        <h2>Add class to the element</h2>
+        <div class="row">
+          <div class="col-5">
+            <p>Use className to add a class to the newly created element.</p>
+          </div>
+          <div class="col-7">
+            <pre class="example"><span class="code-js">let cssSpanTag = document.createElement('span');
+cssSpanTag.className = x;</span></pre>
+          </div>
+        </div>
+
+
+
+
 
 
 
@@ -111,7 +129,7 @@ message.innerHTML = '&lt;strong&gt;We use cookies for analytics.&lt;/strong&gt;'
 
 
   </section>
-  
+
 
 </body>
 
